tests/error/incomplete_parent.gw
class C extends UnknownParentClass {}
class UnknownParentClass {}
